--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/chosen/chosen.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/offcanvas.css" rel="stylesheet">
+    <link href="css/tickets.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -51,50 +53,78 @@
           <p class="pull-right visible-xs">
             <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
           </p>
-          <div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p>
-              Select your 
-            </p>
-          </div>
           <div class="row">
             <div class="col-6 col-sm-6 col-lg-6">
-              <h2>Tasks</h2>
+              <h2>Tickets</h2>
               <ul class="list-group">
-                <li class="list-group-item task">
-                  <a href="#"> Cras justo odio</a>
-                  <form role="form" class="hidden">
-                    <div class="form-group">
-                      <label for="id_hours_worked">Hours Worked</label>
-                      <input type="text" class="form-control" id="id_hours_worked" placeholder="Enter hours worked today" name="hours_worked">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                  </form>
-                </li>
-                <li class="list-group-item task">
+                <li class="list-group-item ticket">
                   <a href="#"> Dapibus ac facilisis in</a>
                 </li>
-                <li class="list-group-item task">
+                <li class="list-group-item ticket">
                   <a href="#"> Morbi leo risus</a>
                 </li>
-                <li class="list-group-item task">
+                <li class="list-group-item ticket">
                   <a href="#"> Porta ac consectetur ac</a>
                 </li>
-                <li class="list-group-item task">
+                <li class="list-group-item ticket">
                   <a href="#"> Vestibulum at eros</a>
                 </li>
               </ul>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-6">
-              <h2>New Task</h2>
-              <form role="form">
+              <h2>New ticket</h2>
+              <form role="form" class="ticket-form">
+                <div class="form-group">
+                  <label for="id_hours_worked">Requirement:</label>
+                  <select>
+                    <option>
+                      Hello, world!: Add ticket
+                    </option>
+                    <option>
+                      Hello, world!: Delete ticket
+                    </option>
+                    <option>
+                      Hello, world!: design page
+                    </option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="id_hours_worked">Accountable:</label>
+                  <select>
+                    <option>
+                    Muni
+                    </option>
+                    <option>
+                    Wooo
+                    </option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="id_tags">Tags:</label>
+                  <select multiple name="tags" id="id_tags">
+                    <option>
+                    Bug
+                    </option>
+                    <option>
+                    Feature
+                    </option>
+                    <option>
+                    Testing
+                    </option>
+                  </select>
+                </div>
                 <div class="form-group">
                   <label for="id_title">Title</label>
                   <input type="text" class="form-control" id="id_title" placeholder="Enter title" name="title">
                 </div>
                 <div class="form-group">
-                  <label for="id_hours_required">Hours Required</label>
-                  <input type="text" class="form-control" id="id_hours_required" placeholder="Enter estimated required hours" name="hours_required">
+                  <label for="id_title">Description</label>
+                  <textarea class="form-control" id="id_title" placeholder="Enter a description" name="description">
+                  </textarea>
+                </div>
+                <div class="form-group">
+                  <label for="id_hours_estimated">Hours Estimated</label>
+                  <input type="text" class="form-control" id="id_hours_estimated" placeholder="Enter estimated required hours" name="hours_estimated">
                 </div>
                 <div class="form-group">
                   <label for="id_hours_worked">Hours Worked</label>
@@ -133,13 +163,44 @@
 
     </div><!--/.container-->
 
+    <script type="text/template" id="ticket-item-template">
+      <li class="list-group-item ticket">
+      <a href="#"> Cras justo odio</a>
+      <form role="form" class="ticket-form hidden">
+        <div class="form-group">
+          <label for="id_hours_worked">Hours Worked</label>
+          <input type="text" class="form-control" id="id_hours_worked" placeholder="Enter hours worked today" name="hours_worked">
+        </div>
+        <div class="form-group">
+          <label for="id_hours_worked">Total Progress (%):</label>
+          <input type="text" class="form-control" id="id_hours_worked" placeholder="Total Progress in percentage" name="hours_worked"/>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      </li>
+    </script>
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/chosen/chosen.jquery.min.js"></script>
+    <script src="bower_components/underscore/underscore-min.js"></script>
+    <script src="bower_components/backbone/backbone-min.js"></script>
+    <script src="bower_components/marionette/lib/backbone.marionette.min.js"></script>
     <script src="js/offcanvas.js"></script>
-    <script src="js/tasks.js"></script>
+
+    <!-- Backbone models -->
+    <script src="js/models/ticket.js"></script>
+
+    <!-- Backbone collections -->
+    <script src="js/collections/tickets.js"></script>
+    
+    <!-- Backbone collections -->
+    <script src="js/views/ticketViews.js"></script>
+
+    <script src="js/app.js"></script>
   </body>
 </html>
 
